# HVAC_Firmware

./: README.md
Bridge/: Bridge.ino  bme_sensor.cpp  bme_sensor.h  logger.cpp  logger.h  rtc_ds1307.cpp  rtc_ds1307.h
Commissioner/: README.md
Commissioner/main/: CMakeLists.txt  commissioner.c  commissioner.h  esp_ot_config.h  joiner_manager.h  main.c  security.c  thread_init.c  uart_rx.c  uart_rx.h  udp_listener.c  udp_listener.h
Documents/Projects/HVAC/Commissioner/: sdkconfig
Documents/Projects/HVAC_v1.1/Bridge/: Bridge.ino  README.md
Documents/Projects/HVAC_v1.1/Commissioner/: CMakeLists.txt
Documents/Projects/HVAC_v1.1/Commissioner/main/: CMakeLists.txt  commissioner.c  commissioner.h  config.h  joiner_manager.c  main.c  security.c  thread_init.c  thread_init.h  uart_rx.c
Documents/Projects/HVAC_v1.1/thread_commissioner/: pubspec.yaml
SED_SENSOR/MLX90640/MLX90640/: MLX90640.ino
SED_SENSOR/SED_SENSOR/: SED_SENSOR.ino
SED_SENSOR_BARE/: SED_SENSOR_BARE.ino
Sensor_Probe/: Sensor_Probe.ino
thread_commissioner/.dart_tool/: package_config.json  package_graph.json
thread_commissioner/.dart_tool/flutter_build/: dart_plugin_registrant.dart
thread_commissioner/.dart_tool/flutter_build/072c2b67878667a175501fef3715590d/: .filecache  dart_build.d  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  kernel_snapshot_program.d  kernel_snapshot_program.stamp
thread_commissioner/.dart_tool/flutter_build/c797e0926102f77cea6b5cc12a525634/: .filecache  dart_build.d  dart_build.stamp  debug_android_application.stamp  flutter_assets.d  (+5 more)
(+75 files in other folders)
